backend/test/resources/valid/example_swe.lgf
@nodes
label type ref
0 0 42
1 0 44
2 0 48
3 0 50
4 0 54
5 0 56
6 0 58
7 0 59
8 0 60
9 0 71
10 0 90
11 10 0
12 20 2
13 12 93
14 11 1
15 20 1
16 10 0
17 20 2
@arcs
    condition
0 11 ""
11 1 ""
11 7 ""
11 8 ""
1 12 ""
7 12 ""
8 12 ""
12 16 ""
16 9 ""
16 4 ""
9 17 ""
4 17 ""
17 5 ""
5 6 ""
6 10 ""
10 13 ""
13 14 3
14 2 "SONST"
14 3 "2fc7f6ef5fd95d05506915763f5b8ff5"
2 15 ""
3 15 ""
@attributes
target 15
