backend/test/resources/invalid/randomDag-g.20.4.graphml-3.lgf
@nodes
label	type	ref
0	0	53
1	0	52
2	0	51
3	0	50
4	0	49
5	12	859
6	20	1
7	10	0
8	0	48
9	11	1
10	0	47
11	20	1
12	20	1
13	20	1
14	20	3
15	20	2
16	12	475
17	10	0
18	20	1
19	20	2
20	11	0
21	0	46
22	0	45
23	0	44
24	0	43
25	0	42
26	0	41
27	0	40
28	0	39
29	0	38
30	0	37
31	0	36
32	0	35
33	0	34
34	0	33
35	0	32
36	0	31
37	0	30
38	0	29
39	0	28
40	0	27
41	0	26
42	0	25
43	0	24
44	0	23
45	0	22
46	0	21
47	0	20
48	0	19
49	0	18
50	0	17
51	0	16
52	0	15
53	0	14
54	0	13
55	0	12
56	0	11
57	0	10
58	0	9
59	0	8
60	0	7
61	0	6
62	0	5
63	0	4
64	0	3
65	0	2
66	0	1
67	0	0
@arcs
		label	condition
0	45	0	""
1	6	1	""
2	62	2	""
3	12	3	""
4	53	4	""
5	0	5	12
5	18	6	55
5	6	7	100
6	7	8	""
7	4	9	""
7	14	10	""
8	18	11	""
9	24	12	92
9	10	13	SONST
10	22	14	""
11	12	15	""
12	59	16	""
13	46	17	""
20	64	18	SONST
20	19	19	53
15	54	20	""
16	17	21	100
16	28	22	11
17	48	23	""
17	61	24	""
17	9	25	""
17	11	26	""
17	39	27	""
17	27	28	""
18	66	29	""
14	20	30	""
21	13	31	""
22	38	32	""
23	52	33	""
24	8	34	""
25	49	35	""
26	65	36	""
27	15	37	""
28	51	38	""
29	41	39	""
30	40	40	""
31	11	41	""
32	43	42	""
33	47	43	""
34	42	44	""
35	34	45	""
36	30	46	""
37	60	47	""
38	50	48	""
39	14	49	""
40	44	50	""
41	18	51	""
42	1	52	""
43	29	53	""
44	32	54	""
45	35	55	""
46	14	56	""
47	19	57	""
48	58	58	""
49	63	59	""
50	31	60	""
51	18	61	""
52	3	62	""
53	23	63	""
54	33	64	""
55	26	65	""
56	37	66	""
57	21	67	""
58	67	68	""
59	25	69	""
60	15	70	""
61	55	71	""
62	13	72	""
63	57	73	""
64	36	74	""
65	5	75	""
66	56	76	""
67	2	77	""
@attributes
target 19
recommended ""
